syntax = "proto3";

message RichLogootSOperation {
  int32 id = 1;
  int32 clock = 2;
  oneof type {
    LogootSAdd logootSAdd = 3;
    LogootSDel logootSDel = 4;
  }
}

message LogootSAdd {
  Identifier id = 1;
  string content = 2;
}

message Identifier {
  repeated int32 base = 1;
  int32 last = 2;
}

message LogootSDel {
  repeated IdentifierInterval lid = 1;
}

message IdentifierInterval {
  repeated int32 base = 1;
  int32 begin = 2;
  int32 end = 3;
}
